--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Cruise Ships</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div id="viewport"></div>
+    <script src="src/controller.js"></script>
+    <script src="src/Port.js"></script>
+    <script>
+      const controller = new Controller();
+    </script>
+  </body>
 </html>
